add service layering